--- a/scss/partials/Home/_home__body.scss
+++ b/scss/partials/Home/_home__body.scss
@@ -9,6 +9,21 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+// 
+#portfolio__title{
+    display: flex;
+    font-size: 70px;
+    font-weight: 400;
+    color: #E9C46A;
+    width: 100%;
+    justify-content: center;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;  
+    margin: 20px 0px 0px 0px;
+
 }
 // 
 .home__page__body__inner {
@@ -18,6 +33,7 @@ body {
     flex-direction: column;
     align-content: center;
     align-items: center;
+    border-bottom: 4px #E9C46A solid;
 }
 // 
 .inner__content {
@@ -29,11 +45,24 @@ body {
     flex-wrap: wrap;
     align-content: flex-end;
     align-items: center;
+    
 }
+
+a:link{
+    color: pink;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #b0dce2;
+    text-decoration: none;
+}
+
 // 
 // 1000px screen //
 @media (min-width: 1000px) { 
     .inner__content {
-        min-height: 1500px;
+        min-height: 2100px;
+
     }
 }
