--- a/scss/partials/Home/_home__project__card.scss
+++ b/scss/partials/Home/_home__project__card.scss
@@ -5,6 +5,13 @@
     width: 100%;
     height: 100%;
     background-color: #0D1321;
+    z-index:0; 
+    -webkit-transform: translateZ( 0 );
+    transform: translateZ( 0 );
+    -webkit-transition: -webkit-transform 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 // 
 .projects__inner {
@@ -97,10 +104,18 @@
         justify-content: center;
     }
 }
-// 
-//  1000px screen //
+// 1000px screen //
 @media (min-width: 1000px) { 
-    .project__inner {
-        max-height: 1500px;
+    .projects__inner__card__lower {
+        
+        h2{
+            font-size: 50px;
+        }
+        
+        a{
+            font-size: 30px
+        }
     }
 }
+
+
