--- a/scss/partials/form/form__success.scss
+++ b/scss/partials/form/form__success.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     padding-left: 150px;
     align-items: center;
-
+    justify-content: center;
 
     h1{
         width: 50%;
